sample/asm/errors/no_end_between_defs.asm
.def: foo
    end
; below should be .end and not .def
.def

.def: main
    izero 0
    end
.end
